post_detail 기능 추가

--- a/wed_test/templates/post/post_list.html
+++ b/wed_test/templates/post/post_list.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 {% for post in posts %}
-<div>
-    <img src="{{ post.photo.url }}" width=75% height=75% alt="">
-</div>
+
+<img src="{{ post.photo.url }}"  alt="">
+
 {% endfor %}
 {% endblock %}
