post_delete 기능 추가

--- a/wed_test/templates/post/post_detail.html
+++ b/wed_test/templates/post/post_detail.html
@@ -3,6 +3,10 @@
     <p>{{ post.title }}</p>
     <img src="{{ post.photo.url }}" alt="" width=100%, heigh=100%>
     <p>{{ post.content }}</p>
+     <form action="/post_delete/{{ post.pk }}/" method="POST">
+        {% csrf_token %}
+        <input type="submit" value="Delete"/>
+    </form>
 </div>
 
 
